# waveSysexConverter

./: AMBIENT.SSX  CMakeLists.txt  DavidSoundBankA.syx  README.md  ShortDavidSoundBankA.syx  WaldorfMicrowavePatchMap  b067_steelWaveSound.syx  hexTest.cpp  microwavePatchConversion.cpp
